--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
-    Labas rytas
 </head>
 <body>
-    
+    <span class= "Bug`as"></span>
 </body>
 </html>
