--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <span class= "Bug`as"></span>
+    <span class= "Bug`as @ 2"></span>
 </body>
 </html>
